# hexmedia

./: .dockerignore  .env  .gitignore  README.md  alembic.ini  hexmedia_design_doc.md  hexmedia_feature_list.md  pyproject.toml  pytest.ini  tsconfig.node.json
docker/: docker-compose.yml
hexmedia/: hexmedia_feature_list.md
hexmedia/common/: iter.py  logging.py  settings.py
hexmedia/common/concurrency/: thread_manager.py
hexmedia/common/naming/: slugger.py
hexmedia/common/path/: safe.py
hexmedia/common/probe/: ffprobe_helpers.py
hexmedia/common/strings/: splitters.py
hexmedia/database/alembic/: env.py
hexmedia/database/core/: main.py  service_object.py  transaction.py
hexmedia/database/models/: __init__.py  media.py  person.py  taxonomy.py
hexmedia/database/repos/: _mapping.py  media_asset_repo.py  media_query.py  media_repo.py  people_repo.py  tag_repo.py
hexmedia/domain/dataclasses/: ingest.py  probe.py  reports.py
hexmedia/domain/entities/: media_artifact.py  media_asset.py  media_item.py  probe.py
hexmedia/domain/enums/: __init__.py  asset_kind.py  cardinality.py  cardnality.py  file_format.py  media_kind.py  person_role.py  upscale_policy.py
hexmedia/domain/policies/: asset_paths.py  ingest_planner.py
hexmedia/domain/ports/: files.py  hashing.py  probe.py  repositories.py  thumbs.py
hexmedia/frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.json
tests/: conftest.py
tests/common/: test_iter_chunked.py  test_naming_slugger.py  test_path_safe.py  test_probe_ffprobe_helpers.py  test_settings_basic.py  test_strings_splitters.py
tests/database/: conftest.py  test_database_person_models.py  test_media_query_repo.py  test_people_repo.py  test_sqlalchemy_media_repo.py
tests/services/: conftest.py  test_people_api.py  test_thumb_service_behavior.py  test_thumb_service_invocation.py
(+79 files in other folders)
